main.tf
resource "azurerm_resource_group" "myterraformgroup" {
    name     = "myResourceGroup"
    location = "eastus2"

    tags {
        environment = "Single vm"
    }
}

# Create virtual network
resource "azurerm_virtual_network" "myterraformnetwork" {
    name                = "myVnet"
    address_space       = ["10.0.0.0/16"]
    location            = "eastus2"
    resource_group_name = "${azurerm_resource_group.myterraformgroup.name}"

    tags {
        environment = "Single vm"
    }
}

# Create subnet
resource "azurerm_subnet" "myterraformsubnet" {
    name                 = "mySubnet"
    resource_group_name  = "${azurerm_resource_group.myterraformgroup.name}"
    virtual_network_name = "${azurerm_virtual_network.myterraformnetwork.name}"
    address_prefix       = "10.0.1.0/24"
}

# Create public IPs
resource "azurerm_public_ip" "myterraformpublicip" {
    name                         = "myPublicIP"
    location                     = "eastus2"
    resource_group_name          = "${azurerm_resource_group.myterraformgroup.name}"
    allocation_method            = "Dynamic"

    tags {
        environment = "Single vm"
    }
}

# Create Network Security Group and rule
resource "azurerm_network_security_group" "myterraformnsg" {
    name                = "myNetworkSecurityGroup"
    location            = "eastus2"
    resource_group_name = "${azurerm_resource_group.myterraformgroup.name}"
    
    security_rule {
        name                       = "SSH"
        priority                   = 1001
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "22"
        source_address_prefix      = "*"
        destination_address_prefix = "*"
    }
    security_rule {
        name                       = "HTTP"
        priority                   = 1002
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "tcp"
        source_port_range          = "*"
        destination_port_range     = "80"
        source_address_prefix      = "*"
        destination_address_prefix = "*"
    }


    tags {
        environment = "Single vm"
    }
}

# Create network interface
resource "azurerm_network_interface" "myterraformnic" {
    name                      = "myNIC"
    location                  = "eastus2"
    resource_group_name       = "${azurerm_resource_group.myterraformgroup.name}"
    network_security_group_id = "${azurerm_network_security_group.myterraformnsg.id}"

    ip_configuration {
        name                          = "myNicConfiguration"
        subnet_id                     = "${azurerm_subnet.myterraformsubnet.id}"
        private_ip_address_allocation = "Dynamic"
        # public_ip_address_id          = "${azurerm_public_ip.myterraformpublicip.id}"
        load_balancer_backend_address_pools_ids = ["${azurerm_lb_backend_address_pool.backpool.id}"]

    }

    tags {
        environment = "Single vm"
    }
}

# # Generate random text for a unique storage account name
resource "random_id" "randomId" {
    keepers = {
        # Generate a new ID only when a new resource group is defined
        resource_group = "${azurerm_resource_group.myterraformgroup.name}"
    }
    
    byte_length = 8
}

# Create storage account for boot diagnostics
resource "azurerm_storage_account" "mystorageaccount" {
    name                        = "diag${random_id.randomId.hex}"
    resource_group_name         = "${azurerm_resource_group.myterraformgroup.name}"
    location                    = "eastus2"
    account_tier                = "Standard"
    account_replication_type    = "LRS"

    tags {
        environment = "Single vm"
    }
}

# Create virtual machine
resource "azurerm_virtual_machine" "myterraformvm" {
    name                  = "myVM"
    location              = "eastus2"
    resource_group_name   = "${azurerm_resource_group.myterraformgroup.name}"
    network_interface_ids = ["${azurerm_network_interface.myterraformnic.id}"]
    vm_size               = "Standard_DS1_v2"

    storage_os_disk {
        name              = "myOsDisk"
        caching           = "ReadWrite"
        create_option     = "FromImage"
        managed_disk_type = "Premium_LRS"
    }

    storage_image_reference {
        id = "/subscriptions/1deb517a-835a-4390-9065-72490fee91e9/resourceGroups/Image/providers/Microsoft.Compute/images/base-image-image-20190527141215"
    }

    os_profile {
        computer_name  = "myvm"
        admin_username = "azureuser"
        admin_password = "Password1234!"
    }
    os_profile_linux_config {
        disable_password_authentication = "false"
    }
    

    boot_diagnostics {
        enabled = "true"
        storage_uri = "${azurerm_storage_account.mystorageaccount.primary_blob_endpoint}"
    }

    tags {
        environment = "Single vm"
    }
}
resource "azurerm_lb" "load" {
  name                = "TestLoadBalancer"
  location            = "eastus2"
  resource_group_name = "${azurerm_resource_group.myterraformgroup.name}"

  frontend_ip_configuration {
    name                 = "PublicIPAddress"
    public_ip_address_id  = "${azurerm_public_ip.myterraformpublicip.id}"
  }
}

resource "azurerm_lb_backend_address_pool" "backpool" {
  resource_group_name = "${azurerm_resource_group.myterraformgroup.name}"
  loadbalancer_id     = "${azurerm_lb.load.id}"
  name                = "BackEndAddressPool"
}

resource "azurerm_lb_probe" "myterraformgroup" {
  resource_group_name = "${azurerm_resource_group.myterraformgroup.name}"
  loadbalancer_id     = "${azurerm_lb.load.id}"
  name                = "running-probe"
  protocol            = "tcp"
  port                = 80
}

resource "azurerm_lb_rule" "myterraformgroup" {
  resource_group_name            = "${azurerm_resource_group.myterraformgroup.name}"
  loadbalancer_id                = "${azurerm_lb.load.id}"
  name                           = "running-probe"
  protocol                       = "Tcp"
  frontend_port                  = 80
  backend_port                   = 80
  frontend_ip_configuration_name = "PublicIPAddress"
  probe_id                       = "${azurerm_lb_probe.myterraformgroup.id}"
  backend_address_pool_id        = "${azurerm_lb_backend_address_pool.backpool.id}"
}
